lenguajeTraductor/lenguajeTraductorParser.py
# Generated from lenguajeTraductor.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class lenguajeTraductorParser ( Parser ):

    grammarFileName = "lenguajeTraductor.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'mostrar'", "'+'", "'si'", "'entonces'", 
                     "'sino'", "'funcion'", "'('", "')'", "'devolver'", 
                     "'activar'", "'guardar entrada en'", "'repetir'", "'hasta el valor de'", 
                     "'mientras'", "'{'", "'}'", "'>'", "'<'", "'=='", "' es verdadero '", 
                     "' es falso '", "'-'", "'*'", "'/'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "NUMBER", 
                      "STRING", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignment = 2
    RULE_printStatement = 3
    RULE_ifStatement = 4
    RULE_elseBlock = 5
    RULE_functionDeclaration = 6
    RULE_returnVariable = 7
    RULE_functionCall = 8
    RULE_inputStatement = 9
    RULE_repeatStatement = 10
    RULE_whileStatement = 11
    RULE_block = 12
    RULE_condition = 13
    RULE_conditionBoolean = 14
    RULE_expression = 15
    RULE_term = 16
    RULE_factor = 17
    RULE_parameters = 18
    RULE_arguments = 19

    ruleNames =  [ "program", "statement", "assignment", "printStatement", 
                   "ifStatement", "elseBlock", "functionDeclaration", "returnVariable", 
                   "functionCall", "inputStatement", "repeatStatement", 
                   "whileStatement", "block", "condition", "conditionBoolean", 
                   "expression", "term", "factor", "parameters", "arguments" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    ID=27
    NUMBER=28
    STRING=29
    WS=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lenguajeTraductorParser.StatementContext)
            else:
                return self.getTypedRuleContext(lenguajeTraductorParser.StatementContext,i)


        def getRuleIndex(self):
            return lenguajeTraductorParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = lenguajeTraductorParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 40
                self.statement()
                self.state = 43 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 402701780) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.AssignmentContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.PrintStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.IfStatementContext,0)


        def elseBlock(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.ElseBlockContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.FunctionDeclarationContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.FunctionCallContext,0)


        def inputStatement(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.InputStatementContext,0)


        def repeatStatement(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.RepeatStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.WhileStatementContext,0)


        def returnVariable(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.ReturnVariableContext,0)


        def getRuleIndex(self):
            return lenguajeTraductorParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = lenguajeTraductorParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 55
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.printStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 47
                self.ifStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 48
                self.elseBlock()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 49
                self.functionDeclaration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 50
                self.functionCall()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 51
                self.inputStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 52
                self.repeatStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 53
                self.whileStatement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 54
                self.returnVariable()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(lenguajeTraductorParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.ExpressionContext,0)


        def getRuleIndex(self):
            return lenguajeTraductorParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = lenguajeTraductorParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(lenguajeTraductorParser.ID)
            self.state = 58
            self.match(lenguajeTraductorParser.T__0)
            self.state = 59
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(lenguajeTraductorParser.STRING)
            else:
                return self.getToken(lenguajeTraductorParser.STRING, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lenguajeTraductorParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(lenguajeTraductorParser.ExpressionContext,i)


        def getRuleIndex(self):
            return lenguajeTraductorParser.RULE_printStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)




    def printStatement(self):

        localctx = lenguajeTraductorParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_printStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(lenguajeTraductorParser.T__1)
            self.state = 64
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [29]:
                self.state = 62
                self.match(lenguajeTraductorParser.STRING)
                pass
            elif token in [8, 27, 28]:
                self.state = 63
                self.expression()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 66
                self.match(lenguajeTraductorParser.T__2)
                self.state = 69
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [29]:
                    self.state = 67
                    self.match(lenguajeTraductorParser.STRING)
                    pass
                elif token in [8, 27, 28]:
                    self.state = 68
                    self.expression()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.ConditionContext,0)


        def block(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.BlockContext,0)


        def elseBlock(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.ElseBlockContext,0)


        def getRuleIndex(self):
            return lenguajeTraductorParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = lenguajeTraductorParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(lenguajeTraductorParser.T__3)
            self.state = 77
            self.condition()
            self.state = 78
            self.match(lenguajeTraductorParser.T__4)
            self.state = 79
            self.block()
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 80
                self.elseBlock()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.BlockContext,0)


        def getRuleIndex(self):
            return lenguajeTraductorParser.RULE_elseBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseBlock" ):
                listener.enterElseBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseBlock" ):
                listener.exitElseBlock(self)




    def elseBlock(self):

        localctx = lenguajeTraductorParser.ElseBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_elseBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(lenguajeTraductorParser.T__5)
            self.state = 84
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(lenguajeTraductorParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.BlockContext,0)


        def parameters(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.ParametersContext,0)


        def getRuleIndex(self):
            return lenguajeTraductorParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)




    def functionDeclaration(self):

        localctx = lenguajeTraductorParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_functionDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(lenguajeTraductorParser.T__6)
            self.state = 87
            self.match(lenguajeTraductorParser.ID)
            self.state = 88
            self.match(lenguajeTraductorParser.T__7)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==27:
                self.state = 89
                self.parameters()


            self.state = 92
            self.match(lenguajeTraductorParser.T__8)
            self.state = 93
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnVariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(lenguajeTraductorParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.ExpressionContext,0)


        def getRuleIndex(self):
            return lenguajeTraductorParser.RULE_returnVariable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnVariable" ):
                listener.enterReturnVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnVariable" ):
                listener.exitReturnVariable(self)




    def returnVariable(self):

        localctx = lenguajeTraductorParser.ReturnVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_returnVariable)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.match(lenguajeTraductorParser.T__9)
                self.state = 96
                self.match(lenguajeTraductorParser.ID)
                pass
            elif token in [8, 27, 28]:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.expression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(lenguajeTraductorParser.ID, 0)

        def arguments(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return lenguajeTraductorParser.RULE_functionCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)




    def functionCall(self):

        localctx = lenguajeTraductorParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_functionCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(lenguajeTraductorParser.T__10)
            self.state = 101
            self.match(lenguajeTraductorParser.ID)
            self.state = 102
            self.match(lenguajeTraductorParser.T__7)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 402653440) != 0):
                self.state = 103
                self.arguments()


            self.state = 106
            self.match(lenguajeTraductorParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(lenguajeTraductorParser.ID, 0)

        def getRuleIndex(self):
            return lenguajeTraductorParser.RULE_inputStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputStatement" ):
                listener.enterInputStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputStatement" ):
                listener.exitInputStatement(self)




    def inputStatement(self):

        localctx = lenguajeTraductorParser.InputStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_inputStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(lenguajeTraductorParser.T__11)
            self.state = 109
            self.match(lenguajeTraductorParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RepeatStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(lenguajeTraductorParser.ID)
            else:
                return self.getToken(lenguajeTraductorParser.ID, i)

        def block(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.BlockContext,0)


        def getRuleIndex(self):
            return lenguajeTraductorParser.RULE_repeatStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRepeatStatement" ):
                listener.enterRepeatStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRepeatStatement" ):
                listener.exitRepeatStatement(self)




    def repeatStatement(self):

        localctx = lenguajeTraductorParser.RepeatStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_repeatStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(lenguajeTraductorParser.T__12)
            self.state = 112
            self.match(lenguajeTraductorParser.ID)
            self.state = 113
            self.match(lenguajeTraductorParser.T__13)
            self.state = 114
            self.match(lenguajeTraductorParser.ID)
            self.state = 115
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.ConditionContext,0)


        def block(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.BlockContext,0)


        def getRuleIndex(self):
            return lenguajeTraductorParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)




    def whileStatement(self):

        localctx = lenguajeTraductorParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(lenguajeTraductorParser.T__14)
            self.state = 118
            self.condition()
            self.state = 119
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lenguajeTraductorParser.StatementContext)
            else:
                return self.getTypedRuleContext(lenguajeTraductorParser.StatementContext,i)


        def getRuleIndex(self):
            return lenguajeTraductorParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = lenguajeTraductorParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(lenguajeTraductorParser.T__15)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 402701780) != 0):
                self.state = 122
                self.statement()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 128
            self.match(lenguajeTraductorParser.T__16)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lenguajeTraductorParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(lenguajeTraductorParser.ExpressionContext,i)


        def conditionBoolean(self):
            return self.getTypedRuleContext(lenguajeTraductorParser.ConditionBooleanContext,0)


        def getRuleIndex(self):
            return lenguajeTraductorParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = lenguajeTraductorParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.expression()
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18]:
                self.state = 131
                self.match(lenguajeTraductorParser.T__17)
                self.state = 132
                self.expression()
                pass
            elif token in [19]:
                self.state = 133
                self.match(lenguajeTraductorParser.T__18)
                self.state = 134
                self.expression()
                pass
            elif token in [20]:
                self.state = 135
                self.match(lenguajeTraductorParser.T__19)
                self.state = 136
                self.expression()
                pass
            elif token in [21, 22]:
                self.state = 137
                self.conditionBoolean()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionBooleanContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return lenguajeTraductorParser.RULE_conditionBoolean

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionBoolean" ):
                listener.enterConditionBoolean(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionBoolean" ):
                listener.exitConditionBoolean(self)




    def conditionBoolean(self):

        localctx = lenguajeTraductorParser.ConditionBooleanContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_conditionBoolean)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            _la = self._input.LA(1)
            if not(_la==21 or _la==22):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lenguajeTraductorParser.TermContext)
            else:
                return self.getTypedRuleContext(lenguajeTraductorParser.TermContext,i)


        def ID(self):
            return self.getToken(lenguajeTraductorParser.ID, 0)

        def getRuleIndex(self):
            return lenguajeTraductorParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = lenguajeTraductorParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.term()
                self.state = 147
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 143
                        _la = self._input.LA(1)
                        if not(_la==3 or _la==23):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 144
                        self.term() 
                    self.state = 149
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.match(lenguajeTraductorParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lenguajeTraductorParser.FactorContext)
            else:
                return self.getTypedRuleContext(lenguajeTraductorParser.FactorContext,i)


        def getRuleIndex(self):
            return lenguajeTraductorParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)




    def term(self):

        localctx = lenguajeTraductorParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.factor()
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24 or _la==25:
                self.state = 154
                _la = self._input.LA(1)
                if not(_la==24 or _la==25):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 155
                self.factor()
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

